# world-clock-xfce-plugin

./: .gitignore  README.md  config.h.in  install.sh  meson.build  plugin.desktop  run.py  test.py  tmp.py
src/: plugin.c  plugin.h  plugin.py
